# itmx-kaggle

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  config.py  docker-compose.yml  prefect_utils.py  pyproject.toml
.docker/: Dockerfile.prefect  Dockerfile.spark
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/bronze/: bronze_raw_eth_account.sql  bronze_raw_transactions.sql  schema.yml
dbt/models/gold/: gold_hourly_network_metrics.sql  gold_transaction_summary.sql  schema.yml
dbt/models/silver/: schema.yml  silver_account_masters.sql  silver_transaction_enriched.sql  silver_transactions.sql
dbt/models/source/: sources.yml
docker/: Dockerfile.prefect  Dockerfile.spark
flows/: kaggle_data_prep.py
scripts/: setup-volumes.sh  setup_python_path.py  spark-submit.sh  verify-setup.sh
spark/: duckdb_spark_query.py
spark/utils/: spark_config.py
